--- a/chess/style.css
+++ b/chess/style.css
@@ -3,7 +3,10 @@
     box-sizing: border-box;
     user-select: none;
     font-family: 'JetBrains Mono';
-    --cell-size: 8vh
+}
+
+:root {
+    --cell-size: 8vh;
 }
 
 body {
@@ -19,6 +22,7 @@ body {
     grid-template-columns: repeat(8, var(--cell-size));
     grid-template-rows: repeat(8, var(--cell-size));
     position: relative;
+    /* border: 5px solid blue; */
 }
 
 .white {
@@ -48,16 +52,17 @@ body {
     width: 100%;
     height: 100%;
     pointer-events: none;
+    /* border: 5px solid red; */
 }
 
 @media screen and (max-width: 425px) {
     #chessboard {
-        grid-template-columns: repeat(8, 12vw);
-        grid-template-rows: repeat(8, 12vw);
+        grid-template-columns: repeat(8, var(--cell-size));
+        grid-template-rows: repeat(8, var(--cell-size));
     }
 
     .piece {
-        width: 12vw;
-        height: 12vw;
+        width: var(--cell-size);
+        height: var(--cell-size);
     }
 }
