--- a/chess/style.css
+++ b/chess/style.css
@@ -66,3 +66,14 @@ body {
         height: var(--cell-size);
     }
 }
+
+/* for test */
+.dot {
+    background-color: red;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+}
