--- a/chess/style.css
+++ b/chess/style.css
@@ -55,6 +55,10 @@ body {
     /* border: 5px solid red; */
 }
 
+.available {
+    background-color: #39FF14;
+}
+
 @media screen and (max-width: 425px) {
     #chessboard {
         grid-template-columns: repeat(8, var(--cell-size));
