--- a/chess/style.css
+++ b/chess/style.css
@@ -22,7 +22,6 @@ body {
     grid-template-columns: repeat(8, var(--cell-size));
     grid-template-rows: repeat(8, var(--cell-size));
     position: relative;
-    /* border: 5px solid blue; */
 }
 
 .white {
@@ -52,7 +51,14 @@ body {
     width: 100%;
     height: 100%;
     pointer-events: none;
-    /* border: 5px solid red; */
+}
+
+.checked {
+    background-color: red;
+}
+
+.lastmoved {
+    background-color: #CCFF00;
 }
 
 .available {
